--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
 index:
     path: /hello-world
-    controller: App\Application\Adapters\Http\HelloWorldHttpAdapter
+    controller: App\Application\Adapters\Http\GreetingHttpAdapter
