--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,17 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": ">=7.4",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
-        "ramsey/uuid": "^4.1",
-        "symfony/console": "5.1.*",
-        "symfony/dotenv": "5.1.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.1.*",
-        "symfony/messenger": "5.1.*",
-        "symfony/yaml": "5.1.*"
+      "php": ">=7.4",
+      "ext-ctype": "*",
+      "ext-iconv": "*",
+      "moneyphp/money": "^3.3",
+      "ramsey/uuid": "^4.1",
+      "symfony/console": "5.1.*",
+      "symfony/dotenv": "5.1.*",
+      "symfony/flex": "^1.3.1",
+      "symfony/framework-bundle": "5.1.*",
+      "symfony/messenger": "5.1.*",
+      "symfony/yaml": "5.1.*"
     },
     "require-dev": {
         "symfony/browser-kit": "5.1.*",
