Product in Doctrine

--- a/.env
+++ b/.env
@@ -1,3 +1,18 @@
+APP_NAME=symfony-api
+APP_ENV=dev
+APP_SECRET=bcbc8cf51feaaa05db8c1269906f4aec
+APP_DEBUG=true
+APP_URL=http://localhost:8000
+
+DB_CONNECTION=mysql
+DB_HOST=database
+DB_PORT=3306
+DB_DATABASE=symfony-db
+DB_USERNAME=user
+DB_PASSWORD=password
+
+LOG_CHANNEL=stack
+
 # In all environments, the following files are loaded if they exist,
 # the latter taking precedence over the former:
 #
@@ -25,17 +40,10 @@
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
 
-APP_NAME=symfony-api
-APP_ENV=dev
-APP_SECRET=bcbc8cf51feaaa05db8c1269906f4aec
-APP_DEBUG=true
-APP_URL=http://localhost:8000
-
-LOG_CHANNEL=stack
-
-DB_CONNECTION=mysql
-DB_HOST=db
-DB_PORT=3306
-DB_DATABASE=symfony-db
-DB_USERNAME=user
-DB_PASSWORD=password
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+DATABASE_URL=mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}?serverVersion=5.7
+###< doctrine/doctrine-bundle ###
