--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,13 @@
       "php": ">=7.4",
       "ext-ctype": "*",
       "ext-iconv": "*",
+      "composer/package-versions-deprecated": "^1.11",
+      "doctrine/doctrine-bundle": "^2.1",
+      "doctrine/doctrine-migrations-bundle": "^3.0",
+      "doctrine/orm": "^2.7",
       "moneyphp/money": "^3.3",
       "ramsey/uuid": "^4.1",
+      "ramsey/uuid-doctrine": "^1.6",
       "symfony/console": "5.1.*",
       "symfony/dotenv": "5.1.*",
       "symfony/flex": "^1.3.1",
@@ -15,8 +20,9 @@
       "symfony/yaml": "5.1.*"
     },
     "require-dev": {
-        "symfony/browser-kit": "5.1.*",
-        "symfony/phpunit-bridge": "^5.1"
+      "symfony/browser-kit": "5.1.*",
+      "symfony/maker-bundle": "^1.23",
+      "symfony/phpunit-bridge": "^5.1"
     },
     "config": {
         "optimize-autoloader": true,
