--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -18,7 +18,7 @@ RUN apt-get update && apt-get install -y \
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install PHP extensions
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
+RUN docker-php-ext-install pdo_mysql php_mysql mbstring exif pcntl bcmath gd
 
 # Install Xdebug
 RUN pecl install xdebug-2.9.8 \
