--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
       "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+      "doctrine/doctrine-fixtures-bundle": "^3.3",
       "symfony/browser-kit": "5.1.*",
       "symfony/maker-bundle": "^1.23",
       "symfony/phpunit-bridge": "^5.1"
