--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
 index:
     path: /greetings
-    controller: App\Application\Adapters\Http\GreetingHttpAdapter
+    controller: App\Adapters\Http\GreetingHttpAdapter
