--- a/composer.json
+++ b/composer.json
@@ -1,74 +1,78 @@
 {
-    "type": "project",
-    "license": "proprietary",
-    "require": {
-      "php": ">=7.4",
-      "ext-ctype": "*",
-      "ext-iconv": "*",
-      "composer/package-versions-deprecated": "^1.11",
-      "doctrine/doctrine-bundle": "^2.1",
-      "doctrine/doctrine-migrations-bundle": "^3.0",
-      "doctrine/orm": "^2.7",
-      "moneyphp/money": "^3.3",
-      "ramsey/uuid": "^4.1",
-      "ramsey/uuid-doctrine": "^1.6",
-      "symfony/console": "5.1.*",
-      "symfony/dotenv": "5.1.*",
-      "symfony/flex": "^1.3.1",
-      "symfony/framework-bundle": "5.1.*",
-      "symfony/messenger": "5.1.*",
-      "symfony/yaml": "5.1.*"
+  "name": "najberg/symfony-api",
+  "description": "Clean Symfony API example",
+  "type": "project",
+  "license": "proprietary",
+  "require": {
+    "php": ">=7.4",
+    "ext-ctype": "*",
+    "ext-iconv": "*",
+    "composer/package-versions-deprecated": "^1.11",
+    "doctrine/doctrine-bundle": "^2.1",
+    "doctrine/doctrine-migrations-bundle": "^3.0",
+    "doctrine/orm": "^2.7",
+    "moneyphp/money": "^3.3",
+    "ramsey/uuid": "^4.1",
+    "ramsey/uuid-doctrine": "^1.6",
+    "sensio/framework-extra-bundle": "^6.1",
+    "symfony/console": "5.1.*",
+    "symfony/dotenv": "5.1.*",
+    "symfony/flex": "^1.3.1",
+    "symfony/framework-bundle": "5.1.*",
+    "symfony/messenger": "5.1.*",
+    "symfony/yaml": "5.1.*"
+  },
+  "require-dev": {
+    "roave/security-advisories": "dev-latest",
+    "symfony/browser-kit": "5.1.*",
+    "symfony/maker-bundle": "^1.23",
+    "symfony/phpunit-bridge": "^5.1"
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": {
+      "*": "dist"
     },
-    "require-dev": {
-      "symfony/browser-kit": "5.1.*",
-      "symfony/maker-bundle": "^1.23",
-      "symfony/phpunit-bridge": "^5.1"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
-    },
-    "replace": {
-        "paragonie/random_compat": "2.*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php72": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "5.1.*"
-        }
+    "sort-packages": true
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "App\\Tests\\": "tests/"
+    }
+  },
+  "replace": {
+    "paragonie/random_compat": "2.*",
+    "symfony/polyfill-ctype": "*",
+    "symfony/polyfill-iconv": "*",
+    "symfony/polyfill-php72": "*",
+    "symfony/polyfill-php71": "*",
+    "symfony/polyfill-php70": "*",
+    "symfony/polyfill-php56": "*"
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    },
+    "post-install-cmd": [
+      "@auto-scripts"
+    ],
+    "post-update-cmd": [
+      "@auto-scripts"
+    ]
+  },
+  "conflict": {
+    "symfony/symfony": "*"
+  },
+  "extra": {
+    "symfony": {
+      "allow-contrib": false,
+      "require": "5.1.*"
+    }
+  }
 }
