--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,13 @@
 index:
-    path: /greetings
-    controller: App\Adapters\Http\GreetingHttpAdapter
+  path: /greetings
+  controller: App\Adapters\Http\GreetingHttpAdapter
 
 get-products:
-    path: /products
-    controller: App\Adapters\Http\GetProductsHttpAdapter
+  path: /products
+  methods: GET
+  controller: App\Adapters\Http\GetProductsHttpAdapter
+
+post-products:
+  path: /products
+  methods: POST
+  controller: App\Adapters\Http\PostProductHttpAdapter
