sending ProductCreated to a fake queue

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -8,7 +8,8 @@ framework:
             # async: '%env(MESSENGER_TRANSPORT_DSN)%'
             # failed: 'doctrine://default?queue_name=failed'
             # sync: 'sync://'
+            sns: 'in-memory://'
 
         routing:
             # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+            'App\Infrastructure\EventListener\EventStoreMessage': sns
