--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.1.*",
     "symfony/messenger": "5.1.*",
+    "symfony/uid": "5.1.*",
     "symfony/yaml": "5.1.*"
   },
   "require-dev": {
