--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,1 +1,13 @@
-#
+index:
+    path: /greetings
+    controller: App\UI\Http\GreetingHttpController
+
+get-products:
+    path: /products
+    methods: GET
+    controller: App\UI\Http\GetProductsHttpController
+
+post-products:
+    path: /products
+    methods: POST
+    controller: App\UI\Http\CreateProductHttpController
