--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,8 +23,8 @@ services:
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/Controller'
+    App\UI\Http\:
+        resource: '../src/UI/Http'
         tags: [ 'controller.service_arguments' ]
 
     # add more service definitions when explicit configuration is needed
