--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,7 +17,7 @@ doctrine:
         mappings:
             App:
                 is_bundle: false
-                type: annotation
-                dir: '%kernel.project_dir%/src/Entity'
+                type: xml
+                dir: '%kernel.project_dir%/src/Infrastructure/config/doctrine'
                 prefix: 'App\Entity'
                 alias: App
