--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "src/"
+      "App\\": "src/",
+      "Framework\\": "framework/"
     }
   },
   "autoload-dev": {
