--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,13 +33,16 @@ services:
     # please note that last definitions always *replace* previous ones
 
     # Command Handlers
-    App\Application\Command\CreateProductHandler:
+    App\Application\Command\:
+        resource: '../src/Application/Command/*Handler.php'
         tags: [ messenger.message_handler ]
 
     # Query Handlers
-    App\Application\Query\GetProductsHandler:
+    App\Application\Query\:
+        resource: '../src/Application/Query/*Handler.php'
         tags: [ messenger.message_handler ]
 
     # Event Listeners
-    App\Infrastructure\EventListener\ProductCreatedListener:
+    App\Infrastructure\EventListener\:
+        resource: '../src/Infrastructure/EventListener/*Listener.php'
         tags: [ messenger.message_handler ]
