--- a/composer.json
+++ b/composer.json
@@ -15,25 +15,28 @@
     "ramsey/uuid": "^4.1",
     "ramsey/uuid-doctrine": "^1.6",
     "sensio/framework-extra-bundle": "^6.1",
-    "symfony/console": "5.1.*",
-    "symfony/dotenv": "5.1.*",
+    "symfony/console": "6.3.*",
+    "symfony/dotenv": "6.3.*",
     "symfony/flex": "^1.3.1",
-    "symfony/framework-bundle": "5.1.*",
-    "symfony/messenger": "5.1.*",
-    "symfony/yaml": "5.1.*"
+    "symfony/framework-bundle": "6.3.*",
+    "symfony/messenger": "6.3.*",
+    "symfony/yaml": "6.3.*"
   },
   "require-dev": {
+    "phpunit/phpunit": "^10",
     "roave/security-advisories": "dev-latest",
-    "symfony/browser-kit": "5.1.*",
-    "symfony/maker-bundle": "^1.23",
-    "symfony/phpunit-bridge": "^5.1"
+    "symfony/browser-kit": "6.3.*",
+    "symfony/maker-bundle": "^1.23"
   },
   "config": {
     "optimize-autoloader": true,
     "preferred-install": {
       "*": "dist"
     },
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "symfony/flex": true
+    }
   },
   "autoload": {
     "psr-4": {
@@ -67,13 +70,10 @@
       "@auto-scripts"
     ]
   },
-  "conflict": {
-    "symfony/symfony": "*"
-  },
+
   "extra": {
     "symfony": {
-      "allow-contrib": false,
-      "require": "5.1.*"
+      "require": "6.3.*"
     }
   }
 }
