--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -3,10 +3,13 @@ doctrine:
         url: '%env(resolve:DATABASE_URL)%'
         types:
             uuid: Ramsey\Uuid\Doctrine\UuidType
+            money: App\Infrastructure\Doctrine\MoneyType
+            name: App\Infrastructure\Doctrine\NameType
+            description: App\Infrastructure\Doctrine\DescriptionType
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
-        #server_version: '5.7'
+        server_version: '5.7'
 
         # Compatibility reasons
         override_url: true
