--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,16 @@
     <server name="SYMFONY_PHPUNIT_REMOVE" value=""/>
     <server name="SYMFONY_PHPUNIT_VERSION" value="10.4"/>
     <env name="KERNEL_CLASS" value="App\Kernel"/>
+
+    <!-- ###+ doctrine/doctrine-bundle ### -->
+    <!-- Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url -->
+    <!-- IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml -->
+    <!--  -->
+    <!-- DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db" -->
+    <!-- DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4" -->
+    <!-- DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4" -->
+    <!--        <env name="DATABASE_URL" value="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&amp;charset=utf8"/>-->
+    <!-- ###- doctrine/doctrine-bundle ### -->
   </php>
 
   <testsuites>
